--- a/CNNExperiments.ipynb
+++ b/CNNExperiments.ipynb
@@ -10473,7 +10473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10493,7 +10493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10759,15 +10759,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "(1,),\n",
-    "            (4, 4, 4, 1),\n",
-    "    as inp, outp for SE3NN\n",
+    "class EquiNet(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.gated = PoolGatedBlock(repr_in, repr_out, size, activation=activation, \n",
+    "                                    pool_size=pool_size, pool_stride=pool_stride, bias=bias)\n",
+    "        self.lin1 = nn.Linear(n_input_1, n_output_1)\n",
+    "        self.drop1 = nn.Dropout(prob)\n",
+    "        self.lin2 = nn.Linear(n_output_1, n_output_2)\n",
+    "        self.drop2 = nn.Dropout(prob)\n",
+    "        self.lin3 = nn.Linear(n_output_2, NUM_CLASSES+6)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.gated(x)\n",
+    "        x = F.relu(self.lin1(x))\n",
+    "        x = self.drop1(x)\n",
+    "        x = F.relu(self.lin2(x))\n",
+    "        x = self.drop2(x)\n",
+    "        return self.lin3(x)\n",
     "    \n",
-    "bias = True"
+    "    \n",
+    "def train(model, device, train_set, optimizer, epoch):\n",
+    "    model.train()\n",
+    "    for batch_idx, (data, target) in enumerate(train_set):\n",
+    "        data, target = data.to(device), target.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(data)\n",
+    "        loss = nn.MSELoss(output, target, reduction='sum')\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        if batch_idx % 10 == 0:\n",
+    "            print('Train Epoch: {} [{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
+    "                epoch, batch_idx * len(data), len(train_loader.dataset),\n",
+    "                100. * batch_idx / len(train_loader), loss.item()))\n",
+    "\n",
+    "def test(model, device, test_set):\n",
+    "    model.eval()\n",
+    "    test_loss = 0\n",
+    "    correct = 0\n",
+    "    with torch.no_grad():\n",
+    "        for data, target in test_set:\n",
+    "            data, target = data.to(device), target.to(device)\n",
+    "            output = model(data)\n",
+    "            test_loss += torch.nn.MSELoss(output, target, reduction='sum').item() # sum up batch loss\n",
+    "            pred = output.argmax(dim=1, keepdim=True) # get the index of the max log-probability\n",
+    "            correct += pred.eq(target.view_as(pred)).sum().item()\n",
+    "\n",
+    "    test_loss /= len(test_loader.dataset)\n",
+    "\n",
+    "    print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
+    "        test_loss, correct, len(test_loader.dataset),\n",
+    "        100. * correct / len(test_loader.dataset)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repr_in = (1,0)\n",
+    "repr_out = (1,0)\n",
+    "size = 4\n",
+    "activation = (F.relu, F.relu)\n",
+    "pool_size = 2\n",
+    "pool_stride = 2\n",
+    "bias = True\n",
+    "n_output_1 = 512\n",
+    "n_output_2 = 256\n",
+    "prob = 0.5\n",
+    "NUM_CLASSES = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "compute 0.pkl.gz... save 0.pkl.gz... done\n",
+      "compute 0.pkl.gz... save 0.pkl.gz... done\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'n_input_1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-2a26a28d110a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mtest_set\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEquiNet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1e-4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-9307c677dad6>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      4\u001b[0m         self.gated = PoolGatedBlock(repr_in, repr_out, size, activation=activation, \n\u001b[1;32m      5\u001b[0m                                     pool_size=pool_size, pool_stride=pool_stride, bias=bias)\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlin1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLinear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_input_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_output_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDropout\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprob\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlin2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLinear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_output_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_output_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'n_input_1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "epochs = 10\n",
+    "device = torch.device('cpu')\n",
+    "torch.manual_seed(1)\n",
+    "\n",
+    "train_set = [([1], [1,1,1,1,1,1,1])]\n",
+    "test_set = []\n",
+    "\n",
+    "model = EquiNet().to(device)\n",
+    "learning_rate = 1e-4\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "\n",
+    "for epoch in range(1, epochs + 1):\n",
+    "    train(model, device, train_set, optimizer, epoch)\n",
+    "    test(model, device, test_set)"
    ]
   },
   {
@@ -10776,23 +10884,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class EquiNet(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(Net, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(1, 20, 5, 1)\n",
-    "        self.conv2 = nn.Conv2d(20, 50, 5, 1)\n",
-    "        self.fc1 = nn.Linear(4*4*50, 500)\n",
-    "        self.fc2 = nn.Linear(500, 10)\n",
+    "loss_fn = torch.nn.MSELoss(reduction='sum')\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        x = F.relu(self.conv1(x))\n",
-    "        x = F.max_pool2d(x, 2, 2)\n",
-    "        x = F.relu(self.conv2(x))\n",
-    "        x = F.max_pool2d(x, 2, 2)\n",
-    "        x = x.view(-1, 4*4*50)\n",
-    "        x = F.relu(self.fc1(x))\n",
-    "        x = self.fc2(x)\n",
-    "        return F.log_softmax(x, dim=1)"
+    "# Use the optim package to define an Optimizer that will update the weights of\n",
+    "# the model for us. Here we will use Adam; the optim package contains many other\n",
+    "# optimization algoriths. The first argument to the Adam constructor tells the\n",
+    "# optimizer which Tensors it should update.\n",
+    "\n",
+    "\n",
+    "for t in range(10000):\n",
+    "  # Forward pass: compute predicted y by passing x to the model.\n",
+    "  y_pred = model(x)\n",
+    "\n",
+    "  # Compute and print loss.\n",
+    "  loss = loss_fn(y_pred, y)\n",
+    "  print(t, loss.item())\n",
+    "  \n",
+    "  # Before the backward pass, use the optimizer object to zero all of the\n",
+    "  # gradients for the Tensors it will update (which are the learnable weights\n",
+    "  # of the model)\n",
+    "  optimizer.zero_grad()\n",
+    "\n",
+    "  # Backward pass: compute gradient of the loss with respect to model parameters\n",
+    "  loss.backward()\n",
+    "\n",
+    "  # Calling the step function on an Optimizer makes an update to its parameters\n",
+    "  optimizer.step()"
    ]
   },
   {
@@ -10814,32 +10931,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repr_in = [(1,0)]\n",
-    "repr_out = [(1,0), (1,2)]\n",
-    "size = 4\n",
-    "activation = (F.relu, F.relu)\n",
-    "pool_size = 2\n",
-    "pool_stride = 2\n",
-    "bias = True\n",
-    "n_input_1 = 512\n",
-    "n_output_1 = 256\n",
-    "n_output_2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "GatedBlock(repr_in, repr_out, size, activation=activation, pool_size=pool_size, pool_stride=pool_stride, bias=bias)\n",
-    "nn.Linear(n_input_1, n_output_1)\n",
-    "F.relu()\n",
-    "nn.Dropout(p=args.p_drop_fully, inplace=True)\n",
-    "nn.Linear(n_output_1, n_output_2)\n",
-    "F.relu()\n",
-    "nn.Dropout()\n",
-    "softmax"
+    "model = torch.nn.Sequential(\n",
+    "            \n",
+    "        )\n",
+    "loss_fn = torch.nn.MSELoss(reduction='sum')"
    ]
   },
   {
