--- a/CNNExperiments.ipynb
+++ b/CNNExperiments.ipynb
@@ -10473,7 +10473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10482,6 +10482,8 @@
     "\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
+    "import torch.utils.data\n",
+    "from torchvision import datasets, transforms\n",
     "\n",
     "from se3cnn import SE3Convolution, SE3Dropout\n",
     "from se3cnn.blocks import GatedBlock\n",
@@ -10493,7 +10495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10650,7 +10652,7 @@
     "        z = self.conv(x)\n",
     "                          \n",
     "        # pool\n",
-    "        if self.ppol is not None:\n",
+    "        if self.pool is not None:\n",
     "            z = self.pool(z)\n",
     "\n",
     "        # gate\n",
@@ -10670,7 +10672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -10717,7 +10719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10727,28 +10729,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[[[ 0.0787]]],\n",
+       "tensor([[[[[ 3.4505]]],\n",
        "\n",
        "\n",
-       "         [[[ 0.2114]]],\n",
+       "         [[[ 4.8365]]],\n",
        "\n",
        "\n",
-       "         [[[-0.1589]]],\n",
+       "         [[[-0.1406]]],\n",
        "\n",
        "\n",
-       "         [[[-0.0251]]],\n",
+       "         [[[-1.7393]]],\n",
        "\n",
        "\n",
-       "         [[[-0.2705]]]]], grad_fn=<ThnnConv3DBackward>)"
+       "         [[[-1.4492]]]]], grad_fn=<ThnnConv3DBackward>)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10759,7 +10761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10776,6 +10778,7 @@
     "\n",
     "    def forward(self, x):\n",
     "        x = self.gated(x)\n",
+    "        x = x.view(batch_size,-1) # tf.reshape(x,[batchSize,-1])\n",
     "        x = F.relu(self.lin1(x))\n",
     "        x = self.drop1(x)\n",
     "        x = F.relu(self.lin2(x))\n",
@@ -10786,16 +10789,17 @@
     "def train(model, device, train_set, optimizer, epoch):\n",
     "    model.train()\n",
     "    for batch_idx, (data, target) in enumerate(train_set):\n",
-    "        data, target = data.to(device), target.to(device)\n",
+    "        #data, target = data.to(device), target.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        output = model(data)\n",
-    "        loss = nn.MSELoss(output, target, reduction='sum')\n",
+    "        loss_fn = nn.MSELoss(reduction='sum')\n",
+    "        loss = loss_fn(output, target)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        if batch_idx % 10 == 0:\n",
     "            print('Train Epoch: {} [{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
-    "                epoch, batch_idx * len(data), len(train_loader.dataset),\n",
-    "                100. * batch_idx / len(train_loader), loss.item()))\n",
+    "                epoch, batch_idx * len(data), len(train_set),\n",
+    "                100. * batch_idx / len(train_set), loss.item()))\n",
     "\n",
     "def test(model, device, test_set):\n",
     "    model.eval()\n",
@@ -10803,22 +10807,23 @@
     "    correct = 0\n",
     "    with torch.no_grad():\n",
     "        for data, target in test_set:\n",
-    "            data, target = data.to(device), target.to(device)\n",
+    "            #data, target = data.to(device), target.to(device)\n",
     "            output = model(data)\n",
-    "            test_loss += torch.nn.MSELoss(output, target, reduction='sum').item() # sum up batch loss\n",
-    "            pred = output.argmax(dim=1, keepdim=True) # get the index of the max log-probability\n",
-    "            correct += pred.eq(target.view_as(pred)).sum().item()\n",
+    "            loss_fn = nn.MSELoss(reduction='sum')\n",
+    "            test_loss += loss_fn(output, target) # sum up batch loss\n",
+    "            # pred = output.argmax(dim=1, keepdim=True) # get the index of the max log-probability\n",
+    "            correct += int(torch.argmax(output) == torch.argmax(target))\n",
     "\n",
-    "    test_loss /= len(test_loader.dataset)\n",
+    "    test_loss /= len(test_set)\n",
     "\n",
     "    print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
-    "        test_loss, correct, len(test_loader.dataset),\n",
-    "        100. * correct / len(test_loader.dataset)))"
+    "        test_loss, correct, len(test_set),\n",
+    "        100. * correct / len(test_set)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10826,38 +10831,68 @@
     "repr_out = (1,0)\n",
     "size = 4\n",
     "activation = (F.relu, F.relu)\n",
-    "pool_size = 2\n",
-    "pool_stride = 2\n",
+    "pool_size = 1\n",
+    "pool_stride = 1\n",
     "bias = True\n",
-    "n_output_1 = 512\n",
-    "n_output_2 = 256\n",
+    "\n",
+    "n_input_1 = 1 #5\n",
+    "n_output_1 = 1 #512\n",
+    "n_output_2 = 1 #256\n",
+    "\n",
+    "batch_size = 1\n",
     "prob = 0.5\n",
     "NUM_CLASSES = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "compute 0.pkl.gz... save 0.pkl.gz... done\n",
-      "compute 0.pkl.gz... save 0.pkl.gz... done\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'n_input_1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-2a26a28d110a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mtest_set\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEquiNet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1e-4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-4-9307c677dad6>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      4\u001b[0m         self.gated = PoolGatedBlock(repr_in, repr_out, size, activation=activation, \n\u001b[1;32m      5\u001b[0m                                     pool_size=pool_size, pool_stride=pool_stride, bias=bias)\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlin1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLinear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_input_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_output_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDropout\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprob\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlin2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLinear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_output_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_output_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'n_input_1' is not defined"
+      "Train Epoch: 1 [0/1 (0%)]\tLoss: 7.519539\n",
+      "\n",
+      "Test set: Average loss: 7.5405, Accuracy: 0/1 (0%)\n",
+      "\n",
+      "Train Epoch: 2 [0/1 (0%)]\tLoss: 7.930464\n",
+      "\n",
+      "Test set: Average loss: 7.5389, Accuracy: 0/1 (0%)\n",
+      "\n",
+      "Train Epoch: 3 [0/1 (0%)]\tLoss: 7.517238\n",
+      "\n",
+      "Test set: Average loss: 7.5374, Accuracy: 0/1 (0%)\n",
+      "\n",
+      "Train Epoch: 4 [0/1 (0%)]\tLoss: 7.926220\n",
+      "\n",
+      "Test set: Average loss: 7.5358, Accuracy: 0/1 (0%)\n",
+      "\n",
+      "Train Epoch: 5 [0/1 (0%)]\tLoss: 7.923973\n",
+      "\n",
+      "Test set: Average loss: 7.5341, Accuracy: 0/1 (0%)\n",
+      "\n",
+      "Train Epoch: 6 [0/1 (0%)]\tLoss: 7.513809\n",
+      "\n",
+      "Test set: Average loss: 7.5325, Accuracy: 0/1 (0%)\n",
+      "\n",
+      "Train Epoch: 7 [0/1 (0%)]\tLoss: 7.919401\n",
+      "\n",
+      "Test set: Average loss: 7.5309, Accuracy: 0/1 (0%)\n",
+      "\n",
+      "Train Epoch: 8 [0/1 (0%)]\tLoss: 7.917083\n",
+      "\n",
+      "Test set: Average loss: 7.5292, Accuracy: 0/1 (0%)\n",
+      "\n",
+      "Train Epoch: 9 [0/1 (0%)]\tLoss: 7.914686\n",
+      "\n",
+      "Test set: Average loss: 7.5275, Accuracy: 0/1 (0%)\n",
+      "\n",
+      "Train Epoch: 10 [0/1 (0%)]\tLoss: 7.912231\n",
+      "\n",
+      "Test set: Average loss: 7.5258, Accuracy: 0/1 (0%)\n",
+      "\n"
      ]
     }
    ],
@@ -10866,8 +10901,60 @@
     "device = torch.device('cpu')\n",
     "torch.manual_seed(1)\n",
     "\n",
-    "train_set = [([1], [1,1,1,1,1,1,1])]\n",
-    "test_set = []\n",
+    "train_set = torch.utils.data.DataLoader(\n",
+    "    datasets.MNIST('../MNIST', train=True, download=True,\n",
+    "                   transform=transforms.Compose([\n",
+    "                       transforms.ToTensor(),\n",
+    "                       transforms.Normalize((0.1307,), (0.3081,))\n",
+    "                   ])),\n",
+    "    batch_size=64, shuffle=True)\n",
+    "test_set = torch.utils.data.DataLoader(\n",
+    "    datasets.MNIST('../MNIST', train=False, transform=transforms.Compose([\n",
+    "                       transforms.ToTensor(),\n",
+    "                       transforms.Normalize((0.1307,), (0.3081,))\n",
+    "                   ])),\n",
+    "    batch_size=1000, shuffle=True)\n",
+    "\n",
+    "train_set = [(torch.tensor([[[[[1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4]],\n",
+    "              \n",
+    "                [[1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4]],\n",
+    "              \n",
+    "                [[1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4]],\n",
+    "              \n",
+    "                [[1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4]]]]], dtype=torch.float64) , torch.tensor([1,1,1,1,1,1,1], dtype=torch.float64))]\n",
+    "\n",
+    "test_set = [(torch.tensor([[[[[1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4]],\n",
+    "              \n",
+    "                [[1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4]],\n",
+    "              \n",
+    "                [[1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4]],\n",
+    "              \n",
+    "                [[1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4],\n",
+    "                [1,2,3,4]]]]], dtype=torch.float64) , torch.tensor([1,1,1,1,1,1,1], dtype=torch.float64))]\n",
+    "\n",
     "\n",
     "model = EquiNet().to(device)\n",
     "learning_rate = 1e-4\n",
@@ -10876,6 +10963,37 @@
     "for epoch in range(1, epochs + 1):\n",
     "    train(model, device, train_set, optimizer, epoch)\n",
     "    test(model, device, test_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 2]\n",
+      "  [2 3]]\n",
+      "\n",
+      " [[1 2]\n",
+      "  [2 3]]]\n",
+      "[[[1 2 1 2]\n",
+      "  [2 3 2 3]]\n",
+      "\n",
+      " [[1 2 1 2]\n",
+      "  [2 3 2 3]]]\n",
+      "[[1 2 1 2 2 3 2 3]\n",
+      " [1 2 1 2 2 3 2 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[[1,2],[2,3]], [[1,2],[2,3]]])\n",
+    "print(a)\n",
+    "print(np.tile(a, 2))\n",
+    "print(np.tile(a, 2).reshape((2, -1)))"
    ]
   },
   {
