--- a/ResEquiNet.ipynb
+++ b/ResEquiNet.ipynb
@@ -29,21 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting data/dataReady0\n",
-      "Extracting data/dataReady0_label\n",
+      "Extracting ../deepSymmetry/data/fromScripts/dataReady0\n",
+      "Extracting ../deepSymmetry/data/fromScripts/dataReady0_label\n",
       "(39785, 13824)\n"
      ]
     }
    ],
    "source": [
-    "train_name = 'data/dataReady0'\n",
+    "train_name = '../deepSymmetry/data/fromScripts/dataReady0'\n",
     "train_set = load_data.read_data_set(train_name, dtype=dtypes.float16, seed = 1)"
    ]
   },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,17 +99,18 @@
     "        self.lin3 = nn.Linear(n_output_2, NUM_CLASSES+6)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        prev_layer = x.expand(100,200,24,24,24)\n",
+    "        prev_layer = x.expand(100,72,24,24,24).clone()\n",
     "        x = self.pool1(self.conv1(x))\n",
-    "        x = torch.cat([torch.zeros(100,200,7,10,10), x, torch.zeros(100,200,7,10,10)], 2)\n",
-    "        x = torch.cat([torch.zeros(100,200,24,7,10), x, torch.zeros(100,200,24,7,10)], 3)\n",
-    "        x = torch.cat([torch.zeros(100,200,24,24,7), x, torch.zeros(100,200,24,24,7)], 4)\n",
-    "        x = torch.add(x, prev_layer)\n",
-    "        x = self.pool2(self.conv2(x))\n",
+    "        x = torch.cat([torch.zeros(100,72,7,10,10), x, torch.zeros(100,72,7,10,10)], 2)\n",
+    "        x = torch.cat([torch.zeros(100,72,24,7,10), x, torch.zeros(100,72,24,7,10)], 3)\n",
+    "        x = torch.cat([torch.zeros(100,72,24,24,7), x, torch.zeros(100,72,24,24,7)], 4)\n",
+    "        x = torch.add(x, prev_layer).clone()\n",
+    "        x = self.pool2(self.conv2(prev_layer))\n",
+    "        \n",
     "        x = x.view(batch_size,-1) \n",
     "        x = F.leaky_relu(self.lin1(x))\n",
     "        x = self.drop1(x)\n",
-    "        x = F.relu(self.lin2(x))\n",
+    "        x = F.leaky_relu(self.lin2(x))\n",
     "        x = self.drop2(x)\n",
     "        return self.lin3(x)\n",
     "    \n",
@@ -195,13 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "repr_in_1 = [(1,0)]\n",
-    "repr_out_1 = [(2,0),(2,1),(2,2),(2,3),(2,4),(2,5),(2,6),(2,7),(2,8),(2,9)]\n",
-    "repr_in_2 = [(2,0),(2,1),(2,2),(2,3),(2,4),(2,5),(2,6),(2,7),(2,8),(2,9)]\n",
+    "repr_out_1 = [(2,0),(2,1),(2,2),(2,3),(2,4),(2,5)] #,(2,6),(2,7),(2,8),(2,9)]\n",
+    "repr_in_2 = [(2,0),(2,1),(2,2),(2,3),(2,4),(2,5)] #,(2,6),(2,7),(2,8),(2,9)]\n",
     "repr_out_2 = [(1,0),(2,1),(2,2),(2,3)]\n",
     "size = 4\n",
     "activation = (None, F.leaky_relu)\n",
@@ -209,8 +210,8 @@
     "pool_stride = 2\n",
     "bias = True\n",
     "\n",
-    "n_input_1 = 837\n",
-    "n_output_1 = 1000 \n",
+    "n_input_1 = 31000\n",
+    "n_output_1 = 5000 \n",
     "n_output_2 = 50\n",
     "\n",
     "batch_size = 100\n",
@@ -222,7 +223,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n",
+      "y\n",
+      "x\n",
+      "y\n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 1\n",
     "device = torch.device('cpu')\n",
@@ -238,130 +250,6 @@
     "for epoch in range(1, epochs + 1):\n",
     "    train(model_tenth_order, device, train_set, batch_size, optimizer, epoch, per_epoch, decr_rate)\n",
     "    # test(model_hard, device, test_set)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[0., 1., 0.]],\n",
-       "\n",
-       "        [[0., 1., 0.]]])"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c = torch.zeros(2,1,3)\n",
-    "c[:,:,1] = torch.Tensor([1])\n",
-    "c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tile(a, dim, n_tile):\n",
-    "    init_dim = a.size(dim)\n",
-    "    repeat_idx = [1] * a.dim()\n",
-    "    repeat_idx[dim] = n_tile\n",
-    "    a = a.repeat(*(repeat_idx))\n",
-    "    order_index = torch.LongTensor(np.concatenate([init_dim * np.arange(n_tile) + i for i in range(init_dim)]))\n",
-    "    return torch.index_select(a, dim, order_index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[1., 1.],\n",
-       "        [1., 1.],\n",
-       "        [0., 0.],\n",
-       "        [0., 0.]])"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tile(c,0,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[0., 1., 0.],\n",
-       "         [0., 2., 0.]],\n",
-       "\n",
-       "        [[0., 1., 0.],\n",
-       "         [0., 2., 0.]],\n",
-       "\n",
-       "        [[0., 1., 0.],\n",
-       "         [0., 2., 0.]],\n",
-       "\n",
-       "        [[0., 1., 0.],\n",
-       "         [0., 2., 0.]]])"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.cat(list(torch.split(c, 2, dim=1))*2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[1., 1., 1.],\n",
-       "         [1., 1., 1.],\n",
-       "         [0., 1., 0.],\n",
-       "         [0., 1., 0.],\n",
-       "         [1., 1., 1.],\n",
-       "         [1., 1., 1.]],\n",
-       "\n",
-       "        [[1., 1., 1.],\n",
-       "         [1., 1., 1.],\n",
-       "         [0., 1., 0.],\n",
-       "         [0., 1., 0.],\n",
-       "         [1., 1., 1.],\n",
-       "         [1., 1., 1.]]])"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.cat([torch.ones(2,2,3), c.expand(2,2,3), torch.ones(2,2,3)], 1)"
    ]
   },
   {
@@ -388,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
